samples/_failures_safe/1761631489_59ce9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_544b2dd2.c: In function ‘print_token’:
./samples/SAFE/__tmp_544b2dd2.c:168:13: error: expected declaration or statement at end of input
  168 |             printf("OPERATOR: %s", token->value);
      |             ^~~~~~
./samples/SAFE/__tmp_544b2dd2.c:168:13: error: expected declaration or statement at end of input
